catalog.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-deployment
  labels: { app: catalog }
spec:
  replicas: 2
  selector:
    matchLabels: { app: catalog }
  template:
    metadata:
      labels: { app: catalog }
    spec:
      containers:
        - name: catalog
          image: 324037320561.dkr.ecr.ap-south-1.amazonaws.com/catalog-service
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
spec:
  selector: { app: catalog }
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
