orders.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-deployment
  labels: { app: orders }
spec:
  replicas: 2
  selector:
    matchLabels: { app: orders }
  template:
    metadata:
      labels: { app: orders }
    spec:
      containers:
        - name: orders
          image: 324037320561.dkr.ecr.ap-south-1.amazonaws.com/orders
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
  selector: { app: orders }
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
